--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,7 @@
 baseURL = 'https://example.org/'
-languageCode = 'en-US'
-title = 'My New Hugo Site'
+languageCode = 'zh-CN'
+title = 'Hugo Theme - Midori'
+# theme = 'midori'
 
 [menus]
   [[menus.main]]
@@ -22,3 +23,12 @@ title = 'My New Hugo Site'
   [module.hugoVersion]
     extended = false
     min = '0.146.0'
+
+[params]
+    themeName = "Midori"
+    version = "0.1.0"
+  [params.author]
+    name = 'KFACBT'
+    email = 'gytxtx@outlook.com'
+
+disableKinds = ["taxonomy", "term", "RSS"]
