feat: 添加 `<kbd>` 和 `<mark>` 元素的适配样式; 预添加 GFM Alert 元素样式，待后续适配

--- a/hugo.toml
+++ b/hugo.toml
@@ -32,3 +32,12 @@ title = 'Hugo Theme - Midori'
     email = 'gytxtx@outlook.com'
 
 disableKinds = ["taxonomy", "term", "RSS"]
+
+# ==========================================================
+# Markdown 渲染设置
+# ==========================================================
+[markup]
+  [markup.goldmark]
+    [markup.goldmark.renderer]
+      # 设置为 true 以允许在 Markdown 文件中直接写 HTML 标签
+      unsafe = true
